# Personal_Assistant_Web_application_Django

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Personal_Assistant/: LICENSE  README.md  docker-compose.yml  manage.py
Personal_Assistant/Personal_Assistant/: asgi.py  settings.py  urls.py  wsgi.py
Personal_Assistant/addressbook/: apps.py  forms.py  models.py  urls.py  views.py
Personal_Assistant/addressbook/migrations/: 0001_initial.py  0002_alter_contact_address_alter_contact_birthday_and_more.py  0003_alter_contact_address_alter_contact_birthday.py  0004_alter_contact_email_alter_contact_phone_number.py  0005_alter_contact_address.py  0006_alter_contact_birthday_alter_contact_email_and_more.py  0007_alter_contact_email_alter_contact_phone_number.py  0008_contact_user.py
Personal_Assistant/app/: forms.py  models.py  urls.py  views.py
Personal_Assistant/app/migrations/: 0001_initial.py
Personal_Assistant/app/templates/: 404.html
Personal_Assistant/docs/: conf.py  index.rst
Personal_Assistant/exchange_rate/: apps.py  views.py
Personal_Assistant/file_app/: apps.py  forms.py  models.py  urls.py  views.py
Personal_Assistant/file_app/migrations/: 0001_initial.py  0002_remove_file_user.py  0003_remove_file_file.py  (+7 more)
Personal_Assistant/news/: apps.py  urls.py  views.py
Personal_Assistant/notebook/: apps.py  forms.py  models.py  urls.py  views.py
Personal_Assistant/static/: delete_object.js  script.js  styles.css
Personal_Assistant/statistic_war/: apps.py  views.py
Personal_Assistant/user_management/: apps.py
Personal_Assistant/users/: apps.py  forms.py  urls.py  views.py
(+45 files in other folders)
